--- a/client/package.json
+++ b/client/package.json
@@ -55,6 +55,7 @@
   },
   "dependencies": {
     "react": "^15.3.1",
+    "react-bootstrap": "^0.30.5",
     "react-dom": "^15.3.1",
     "react-router": "^2.8.1"
   }
